fix(styles): fix alignment of content in feature card

--- a/packages/styles/scss/components/_featurecard.scss
+++ b/packages/styles/scss/components/_featurecard.scss
@@ -199,6 +199,7 @@
         );
         font-family: $fonts-display;
         font-weight: 700;
+        flex: 1;
       }
 
       #{$self}--eyebrow {
